--- a/api/pom.xml
+++ b/api/pom.xml
@@ -29,6 +29,7 @@
             <groupId>org.osgi</groupId>
             <artifactId>org.osgi.enterprise</artifactId>
             <version>4.2.0</version>
+            <scope>provided</scope>
             <type>jar</type>
         </dependency>
     </dependencies>
