--- a/examples/webapp/src/main/webapp/WEB-INF/web.xml
+++ b/examples/webapp/src/main/webapp/WEB-INF/web.xml
@@ -15,7 +15,7 @@
     </servlet-mapping>
     <servlet>
         <servlet-name>Jersey Web Application</servlet-name>
-        <servlet-class>com.sun.jersey.spi.container.servlet.ServletContainer</servlet-class>
+        <servlet-class>org.glassfish.jersey.servlet.ServletContainer</servlet-class>
         <init-param>
             <param-name>javax.ws.rs.Application</param-name>
             <param-value>org.glassfish.plummer.kernel.rest.RestApplication</param-value>
